# Gomoku

./: CMakeLists.txt  GameBoard.py  PiskvorkInterface.cpp  PiskvorkInterface.hpp  README.md  main.cpp
algo/: Board.cpp  Board.hpp  Evaluator.cpp  Evaluator.hpp  MinMax.cpp  MinMax.hpp  MinMaxAlphaBeta.cpp  MinMaxAlphaBeta.hpp  TreeNode.cpp  TreeNode.hpp  TreeNode.tpp
c++/: CMakeLists.txt  PiskvorkInterface.cpp  PiskvorkInterface.hpp  main.cpp
c++/algo/: Board.hpp  Evaluator.cpp  Evaluator.hpp  MinMax.cpp  MinMax.hpp  TreeNode.tpp
python/: GameBoard.py  evaluator.py  main.py  mcts.py  neuralnet.py  training.py
